# django-model-viewer

./: LICENSE  README.md  setup.cfg  setup.py
src/django_model_viewer/: utilities.py
