[metadata]
name = django-model-viewer
version = 0.0.1
author = Adland Lee
author_email = adland[AT]4mfd[DOT]com
description = A tool for viewing Django model properties and relationships
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = '>=3.6'
install_requires =
    Django

[options.packages.find]
where = src
